erDiagram
    USER_PROGRESSION {
        int Id PK
        int UserId FK
        int TotalPoints
        int TotalXP
        int Level
        date CreatedDate
    }
    USER_WALLET {
        int Id PK
        int UserId FK
        int Balance
    }
    WALLET_TRANSACTION {
        int Id PK
        int WalletId FK
        int Amount
        string TransactionType
        string Description
        date CreatedDate
    }
    ACHIEVEMENT {
        int Id PK
        string Name
        string Description
        int RequiredXP
        string Icon
    }
    USER_ACHIEVEMENT {
        int Id PK
        int UserId FK
        int AchievementId FK
        date EarnedDate
    }
    MARKETPLACE_ITEM {
        int Id PK
        string Name
        int Price
        string ItemType
        string Description
    }
    MARKETPLACE_TRANSACTION {
        int Id PK
        int UserId FK
        int ItemId FK
        int PricePaid
        date PurchasedDate
    }
    USER_INVENTORY {
        int Id PK
        int UserId FK
        int ItemId FK
        bool IsEquipped
        date AcquiredDate
    }
    LEADERBOARD {
        int Id PK
        int WorkspaceId FK
        string PeriodType
        date PeriodStart
    }
    TEAM_LEADERBOARD {
        int Id PK
        int LeaderboardId FK
        int TeamId FK
        int Score
    }
    USER_STREAK {
        int Id PK
        int UserId FK
        int CurrentStreak
        int LongestStreak
        date LastActivityDate
    }

    USER_PROGRESSION ||--o{ USER_WALLET : has
    USER_WALLET ||--o{ WALLET_TRANSACTION : contains
    USER_PROGRESSION ||--o{ USER_ACHIEVEMENT : earns
    ACHIEVEMENT ||--o{ USER_ACHIEVEMENT : earned_by
    USER_PROGRESSION ||--o{ MARKETPLACE_TRANSACTION : purchases
    MARKETPLACE_ITEM ||--o{ MARKETPLACE_TRANSACTION : sold_as
    USER_PROGRESSION ||--o{ USER_INVENTORY : owns
    MARKETPLACE_ITEM ||--o{ USER_INVENTORY : item_in
    LEADERBOARD ||--o{ TEAM_LEADERBOARD : contains
    USER_PROGRESSION ||--o{ USER_STREAK : tracks
